--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bch",
   "version": "1.0.0",
-  "description": "InstaCram (Instagram Clone)",
+  "description": "Margatsi (Instagram Clone)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
