--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Margatsi (Instagram Clone)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "client": "cd client && npm start",
     "constart": "concurrently -n 'server,client' -c 'cyan,yellow' \"nodemon server.js\" \"npm run client\""
   },
