--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Margatsi (Instagram Clone)",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "client": "cd client && npm start",
     "constart": "concurrently -n 'server,client' -c 'cyan,yellow' \"nodemon server.js\" \"npm run client\""
